testsuite/single/tests/compiler/fail/mixed_case.lpc
void foo(mixed x) {
    switch (x) {
    case 1:
    case "hi":
    }
}
